# ogl

./: CMakeLists.txt  README.md  color.hpp  context.cpp  context.hpp  error.cpp  ogl.hpp  types.hpp  window.cpp  window.hpp
example/: CMakeLists.txt  ex1_4.6.cpp  ex1_5.5.2.cpp  ex1_5.5.cpp  ex1_5.6-1.cpp  ex1_5.6-2.cpp  ex1_5.8.1.cpp  ex1_5.8.2.cpp  ex1_5.8.3.cpp  ex1_6.3.cpp  ex1_6.4.cpp  ex1_6.5.cpp  ex1_6.8.1.cpp  ex1_6.8.2.cpp  ex1_6.8.3.cpp
ogl/: buffer.hpp  color.hpp  concepts.hpp  context.hpp  core.hpp  core.ipp  error.hpp  extern.hpp  ranges.hpp  shader.hpp  shader.ipp  traits.hpp  types.hpp  uniform.hpp  uniform.ipp  vec.hpp  vertex.hpp  vertex.ipp  window.hpp
src/: buffer.cpp  common.ipp  context.cpp  core.cpp  error.cpp  internal.hpp  shader.cpp  uniform.cpp  vertex.cpp  window.cpp
