cmake_minimum_required(VERSION 3.16) # focal

include_directories(..)
link_libraries(ogl)

add_executable(ex1_4.6   ex1_4.6.cpp)

add_executable(ex1_5.5   ex1_5.5.cpp)
add_executable(ex1_5.5.2 ex1_5.5.2.cpp)
add_executable(ex1_5.6-1 ex1_5.6-1.cpp)
add_executable(ex1_5.6-2 ex1_5.6-2.cpp)
add_executable(ex1_5.8.1 ex1_5.8.1.cpp)
add_executable(ex1_5.8.2 ex1_5.8.2.cpp)
add_executable(ex1_5.8.3 ex1_5.8.3.cpp)

add_executable(ex1_6.3   ex1_6.3.cpp)
